compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__assert_binary_operation3.snap
---
source: compiler-core/src/erlang/tests/assert.rs
expression: "\npub fn assert_answer(x) {\n  assert x == 42\n}\n"
---
----- SOURCE CODE

pub fn assert_answer(x) {
  assert x == 42
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([assert_answer/1]).

-spec assert_answer(integer()) -> nil.
assert_answer(X) ->
    _value = 42,
    case X =:= _value of
        true ->
            nil;

        false ->
            erlang:error(#{
                gleam_error => assert,
                message => ~"Assertion failed.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"assert_answer",
                line => 3,
                kind => binary_operator,
                operator => '==',
                left => #{
                    kind => expression,
                    value => X,
                    start => 36,
                    'end' => 37
                },
                right => #{
                    kind => literal,
                    value => _value,
                    start => 41,
                    'end' => 43
                },
                start => 29,
                'end' => 43,
                expression_start => 36
            })
    end.
