compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__assert_with_block_message.snap
---
source: compiler-core/src/erlang/tests/assert.rs
expression: "\nfn identity(a) {\n  a\n}\n\npub fn main() {\n  assert identity(True) as {\n    let message = identity(\"This shouldn't fail\")\n    message\n  }\n}\n"
---
----- SOURCE CODE

fn identity(a) {
  a
}

pub fn main() {
  assert identity(True) as {
    let message = identity("This shouldn't fail")
    message
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec identity(I) -> I.
identity(A) ->
    A.

-spec main() -> nil.
main() ->
    case identity(true) of
        true ->
            nil;

        false ->
            erlang:error(#{
                gleam_error => assert,
                message => begin
                    Message = identity(~"This shouldn't fail"),
                    Message
                end,
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 7,
                kind => function_call,
                arguments => [#{
                    kind => literal,
                    value => true,
                    start => 59,
                    'end' => 63
                }],
                start => 43,
                'end' => 64,
                expression_start => 50
            })
    end.
